--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Mulish:wght@300&family=Roboto+Condensed&family=Source+Serif+4:opsz,wght@8..60,400;8..60,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="img/iconglobalandleaf.svg">
+    <link rel="icon" href="img/1572647_cardboard_cardboard boxes_recycling_icon.svg">
 </head>
 </head>
 <body>
@@ -20,15 +20,16 @@
         </div>
         <div class="descricao">
             <h1 id="texto1">Acesse a plataforma</h1>
-            <h2 id="texto2">Descubra novos modos de conviver com a natureza.</h2>
+            <h2 id="texto2">Descubra novos modos de conviver com a natureza e interagir com o mundo ao seu redor.</h2>
         </div>
         <div class="input">
-            <label for="email" id="Emailfont">Email</label>
+            <label for="email" id="Contafont">Conta</label>
             <input type="text" id="email" required placeholder="Digite seu email...">
-            <label for="password" id="Senhafont">Senha</label> 
-            <a href="" id="SenhaEsq">Esqueceu a senha?</a>
             <input type="password" id="password" required placeholder="Digite sua senha...">
-            <button>Login</button>
+            <a href="" id="SenhaEsq">Esqueceu a senha?</a>
+            <button id="buttonLogin">Login</button>
+            <h1 id="NTconta">Não tem uma conta?</h1>
+            <a href="" id="aRegistro">Registre-se Agora!</a>
         </div>
 
     </main>
